# CppTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main_test.cpp
